--- a/babel-preset-app-node/package.json
+++ b/babel-preset-app-node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-preset-node",
+  "name": "babel-preset-app-node",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
