--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "bootstrap": "yarn install && yarn lerna bootstrap",
+    "bootstrap": "yarn install && yarn lerna bootstrap || yarn lerna bootstrap",
+    "clean": "lerna clean --yes && rm -rf node_modules",
     "api": "cd api && yarn"
   },
   "workspaces": [
     "babel-preset-app",
-    "babel-preset-node",
+    "babel-preset-app-node",
     "web",
-    "api"
+    "api",
+    "api/src"
   ],
   "engines": {
     "node": ">=8.1.0",
