--- a/api/src/package.json
+++ b/api/src/package.json
@@ -4,6 +4,11 @@
   "main": "app/app.js.js",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "build": "rm -rf dist && babel app --copy-files -d dist/app",
+    "start": "cd dist && node app/server",
+    "start:watch": "node-dev --poll --inspect=0.0.0.0:8081 app/server | bunyan"
+  },
   "dependencies": {
     "bunyan": "^1.8.12",
     "cluster": "^0.7.7",
@@ -12,8 +17,8 @@
     "join-monster": "^2.0.16",
     "spdy": "^3.4.7"
   },
-  
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-app-node": "*",
     "chalk": "^2.4.1",
