--- a/api/src/package.json
+++ b/api/src/package.json
@@ -10,12 +10,21 @@
     "start:watch": "node-dev --poll --inspect=0.0.0.0:8081 app/server | bunyan"
   },
   "dependencies": {
+    "apollo-server-koa": "^1.3.6",
     "bunyan": "^1.8.12",
     "cluster": "^0.7.7",
     "graphql": "^0.13.2",
     "hashids": "^1.1.4",
     "join-monster": "^2.0.16",
-    "spdy": "^3.4.7"
+    "koa": "^2.5.1",
+    "koa-bodyparser": "^4.2.1",
+    "koa-compress": "^3.0.0",
+    "koa-conditional-get": "^2.0.0",
+    "koa-etag": "^3.0.0",
+    "koa-morgan": "^1.0.1",
+    "koa-router": "^7.4.0",
+    "spdy": "^3.4.7",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
