--- a/web/package.json
+++ b/web/package.json
@@ -6,18 +6,23 @@
   "private": true,
   "scripts": {
     "_local_env_cmd_": "env-cmd ./env/local/.env",
-    "local": "yarn _local_env_cmd_ yarn _start_",
-    "_start_": "react-scripts start",
-    "test": "yarn react-scripts test",
-    "build": "yarn react-scripts build"
+    "local": "yarn _local_env_cmd_ react-scripts start",
+    "test": "react-scripts test",
+    "build": "react-scripts build"
   },
   "engines": {
     "node": ">=8.9.4",
     "yarn": ">=1.5.1"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.2.4",
+    "apollo-client": "^2.3.4",
+    "apollo-link-context": "^1.0.8",
+    "apollo-link-http": "^1.5.4",
     "cross-env": "^5.2.0",
     "env-cmd": "^8.0.2",
+    "graphql-tag": "^2.9.2",
+    "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -27,5 +32,6 @@
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.1.1"
-  }
+  },
+  "proxy": "http://localhost:8082"
 }
